--- a/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/reportes/component/proyecto/preparacion/preparacion.component.html
@@ -69,19 +69,19 @@
                 <tbody>
                   <tr *ngFor="let element of this.dataPreConstruccionObra?.tablaPreconstruccion">
                     <td class="mat-cell cdk-cell ng-star-inserted">
-                      <b> {{ element.perfil }} </b>
+                      <b> {{ element.nombrePerfil }} </b>
                     </td>
                     <td class="mat-cell cdk-cell ng-star-inserted">
-                      {{ element.hvRequeridas }}
+                      {{ element.cantidadHvRequeridas }}
                     </td>
                     <td class="mat-cell cdk-cell ng-star-inserted">
-                      {{ element.hvRecibidas }}
+                      {{ element.cantidadHvRecibidas }}
                     </td>
                     <td class="mat-cell cdk-cell ng-star-inserted">
-                      {{ element.hvAprobadas }}
+                      {{ element.cantidadHvAprobadas }}
                     </td>
                     <td class="mat-cell cdk-cell ng-star-inserted">
-                      {{ element.urlSoporte }}
+                      {{ element.rutaSoporte }}
                     </td>
                   </tr>
                 </tbody>
@@ -128,19 +128,19 @@
               <tbody>
                 <tr *ngFor="let element of this.dataPreConstruccionInterventoria?.tablaPreconstruccion">
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    <b> {{ element.perfil }} </b>
+                    <b> {{ element.nombrePerfil }} </b>
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.hvRequeridas }}
+                    {{ element.cantidadHvRequeridas }}
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.hvRecibidas }}
+                    {{ element.cantidadHvRecibidas }}
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.hvAprobadas }}
+                    {{ element.cantidadHvAprobadas }}
                   </td>
                   <td class="mat-cell cdk-cell ng-star-inserted">
-                    {{ element.urlSoporte }}
+                    {{ element.rutaSoporte }}
                   </td>
                 </tr>
               </tbody>
@@ -178,7 +178,7 @@
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
-                  Contrato de obra N801801
+                  Contrato de obra {{ this.dataConstruccionObra?.numeroContrato }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
@@ -196,13 +196,14 @@
                         <strong>
                           ¿Cuenta con informe de diagnóstico aprobado por la interventoría?:
                         </strong>
-                        Sí
+                        <span *ngIf="this.dataConstruccionObra?.diagnostico?.cuentaConInformeDiagnosticoAprobado == true">Sí</span>
+                        <span *ngIf="this.dataConstruccionObra?.diagnostico?.cuentaConInformeDiagnosticoAprobado != true">No</span>
                       </p>
                       <p>
                         <strong>
                           URL con soporte:
                         </strong>
-                        https://drive.google.com/drive/informeinterventoria1
+                        {{ this.dataConstruccionObra?.diagnostico?.urlSoporte }}
                       </p>
                     </mat-card-content>
                   </mat-card>
@@ -218,31 +219,31 @@
                         <strong>
                           a. Costo directo:
                         </strong>
-                        $17.000.000
+                        {{ this.dataConstruccionObra?.diagnostico?.costoDirecto | currency:'COP':'symbol-narrow':'.0-0' }}
                       </p>
                       <p>
                         <strong>
                           b. A (administración):
                         </strong>
-                        $5.000.000
+                        {{ this.dataConstruccionObra?.diagnostico?.administracion | currency:'COP':'symbol-narrow':'.0-0' }}
                       </p>
                       <p>
                         <strong>
                           c. I (Imprevistos):
                         </strong>
-                        $10.000.000
+                        {{ this.dataConstruccionObra?.diagnostico?.imprevistos | currency:'COP':'symbol-narrow':'.0-0' }}
                       </p>
                       <p>
                         <strong>
                           d. U (Utilidad):
                         </strong>
-                        $17.000.000
+                        {{ this.dataConstruccionObra?.diagnostico?.utilidad | currency:'COP':'symbol-narrow':'.0-0' }}
                       </p>
                       <p>
                         <strong>
                           Valor total de la fase 2 - Construcción:
                         </strong>
-                        $49.000.000
+                        {{ this.dataConstruccionObra?.diagnostico?.valorTotalConstruccion | currency:'COP':'symbol-narrow':'.0-0' }}
                       </p>
                     </mat-card-content>
                   </mat-card>
@@ -251,16 +252,17 @@
                     <strong>
                       ¿Se requirió modificación contractual?:
                     </strong>
-                    Sí
+                    <span *ngIf="this.dataConstruccionObra?.diagnostico?.tieneModificacionContractual == true">Sí</span>
+                    <span *ngIf="this.dataConstruccionObra?.diagnostico?.tieneModificacionContractual != true">No</span>
                   </p>
 
-                  <mat-card class="shipping-card var-main-gris">
+                  <mat-card class="shipping-card var-main-gris" *ngIf="this.dataConstruccionObra?.diagnostico?.tieneModificacionContractual == true">
                     <mat-card-content>
                       <p>
                         <strong>
                           Número de solicitud de la modificación:
                         </strong>
-                        PI_00089
+                        {{ this.dataConstruccionObra?.diagnostico?.numeroModificacion }}
                       </p>
                     </mat-card-content>
                   </mat-card>
@@ -287,19 +289,22 @@
                       <tbody>
                         <tr *ngFor="let element of listaPlanes">
                           <td class="mat-cell cdk-cell ng-star-inserted">
-                            <b> {{ element.planesProgramas }} </b>
+                            <b> {{ element.nombre }} </b>
                           </td>
                           <td class="mat-cell cdk-cell ng-star-inserted">
-                            {{ element.recibioRequisito }}
+                            <span *ngIf="element.recibioRequisito == true">Sí</span>
+                            <span *ngIf="element.recibioRequisito == false">No</span>
+                            <span *ngIf="element.recibioRequisito == '3'">No se requiere</span>
                           </td>
                           <td class="mat-cell cdk-cell ng-star-inserted">
-                            {{ element.fechaRadicado }}
+                            {{ element.fechaRadicado | date: 'dd/MM/yyyy'}}
                           </td>
                           <td class="mat-cell cdk-cell ng-star-inserted">
-                            {{ element.fechaAprobacion }}
+                            {{ element.fechaAprobacion | date: 'dd/MM/yyyy'}}
                           </td>
                           <td class="mat-cell cdk-cell ng-star-inserted">
-                            {{ element.observacionesRequisito }}
+                            <span *ngIf="element.tieneObservaciones == true">Sí</span>
+                            <span *ngIf="element.tieneObservaciones != true">No</span>
                           </td>
                         </tr>
                       </tbody>
@@ -310,7 +315,7 @@
                     <strong>
                       URL con soporte:
                     </strong>
-                    https://drive.google.com/drive/PlanesyProgramas123
+                    {{ this.dataConstruccionObra?.planesYProgramas?.urlConSoporte }}
                   </p>
 
               </mat-expansion-panel>
@@ -483,7 +488,7 @@
         <mat-expansion-panel class="expansion-style sub-expansion">
             <mat-expansion-panel-header class="expansion-style--header">
                 <mat-panel-title class="expansion-style--title">
-                  Contrato de interventoría A513513
+                  Contrato de interventoría {{ this.dataConstruccionInterventoria?.numeroContrato }}
                 </mat-panel-title>
             </mat-expansion-panel-header>
 
